proj1/tests/other-tests/oskis-angels_tests/correct/loop-break-continue.py
for i in range(10):
    if i == 5:
        break
    print i

for j in range(10):
    if j % 2 == 0:
        continue
    print j
