proj1/tests/other-tests/oskis-angels_tests/error/function-in-for.py
for i in range(1,2):
    def a():
        return 10
